# live-moderator-agent

./: .env.example  .gitignore  ARCHITECTURE.md  pyproject.toml
.claude/: settings.local.json
client/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/src/: app.ts
client/src/audio/: webrtc.ts
client/src/connection/: server-ws.ts
client/src/state/: store.ts
client/src/ui/styles/: main.css
config/: sample-agenda.json
server/: config.py  main.py
server/conference/: agenda_manager.py  state_machine.py  timer.py  tools.py
server/models/: agenda.py  messages.py  state.py
server/prompts/: builder.py  system.py  templates.py
server/realtime/: events.py  session.py  sideband.py
server/utils/: logger.py
server/ws/: handler.py
tests/: test_agenda_manager.py  test_prompt_builder.py  test_state_machine.py  test_tools.py
